syntax = "proto3";
package core.v1;

import "core/v1/types.proto";

option go_package = "github.com/OpenAudio/go-openaudio/pkg/api/core/v1";

service CoreService {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse) {}
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
  rpc GetNodeInfo(GetNodeInfoRequest) returns (GetNodeInfoResponse) {}
  rpc GetBlock(GetBlockRequest) returns (GetBlockResponse) {}
  rpc GetBlocks(GetBlocksRequest) returns (GetBlocksResponse) {}
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse) {}
  rpc SendTransaction(SendTransactionRequest) returns (SendTransactionResponse) {}
  rpc ForwardTransaction(ForwardTransactionRequest) returns (ForwardTransactionResponse) {}
  rpc GetRegistrationAttestation(GetRegistrationAttestationRequest) returns (GetRegistrationAttestationResponse) {}
  rpc GetDeregistrationAttestation(GetDeregistrationAttestationRequest) returns (GetDeregistrationAttestationResponse) {}
  rpc GetStoredSnapshots(GetStoredSnapshotsRequest) returns (GetStoredSnapshotsResponse) {}
  rpc GetSlashAttestation(GetSlashAttestationRequest) returns (GetSlashAttestationResponse) {}
  rpc GetSlashAttestations(GetSlashAttestationsRequest) returns (GetSlashAttestationsResponse) {}
  
  rpc GetERN(GetERNRequest) returns (GetERNResponse) {}
  rpc GetMEAD(GetMEADRequest) returns (GetMEADResponse) {}
  rpc GetPIE(GetPIERequest) returns (GetPIEResponse) {}
  
  rpc GetReward(GetRewardRequest) returns (GetRewardResponse) {}
  rpc GetRewards(GetRewardsRequest) returns (GetRewardsResponse) {}
  rpc GetRewardAttestation(GetRewardAttestationRequest) returns (GetRewardAttestationResponse) {}

  rpc GetStreamURLs(GetStreamURLsRequest) returns (GetStreamURLsResponse) {}

  rpc GetUploadByCID(GetUploadByCIDRequest) returns (GetUploadByCIDResponse) {}
}
